--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.4.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "expo-auth-session": "~5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
